--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,5 +1,5 @@
 name = "ucpf"
-main = "worker.js"
+main = "_worker.js"
 compatibility_date = "2025-11-02"
 usage_model = "bundled"
 workers_dev = true
